--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,16 +1,62 @@
 .container{
-	max-width: 960px;
+	max-width: 1280px;
+	outline: none;
+	margin: 0 auto;
+	margin-top: 20px;
 }
 .site{
 	display: grid;
 	grid-gap: 5px;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 80px repeat(3, 300px) 600px 80px;
+	// grid-template-columns: 1fr 1fr 1fr;
+	// grid-template-rows: 80px repeat(3, 300px) 600px 80px;
+
 	grid-template-areas:
-	"nav nav nav"
-	" sec1 sec1"
-	"sec2 sec2 img2"
-	"img3 sec3 sec3"
-	"advforyou advforothers advgeneral"
+	"navigation navigation navigation"
+	"sec1 sec1 sec1"
+	"sec2 sec2 sec2"
+	"sec3 sec3 sec3"
 	"foot foot foot";
+
+}
+.navigation{
+	// grid-column: 1 / 4;
+	justify-content: stretch;
+	margin: auto;
+	ul{
+		text-align: center;
+		li{
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		display: inline-block;
+		margin: auto;
+		padding-left: 20px;
+		padding-right: 20px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+			a{
+				display: block;
+				margin: auto;
+				text-decoration: none;
+			}//a
+		}//li
+	}//ul
+}//.nav
+@media screen and (max-width: 959px){
+	.container{
+		outline: solid 0px;
+	}
+}
+@media screen and (max-width: 860px){
+	.site{
+		display: grid;
+		grid-gap: 5px;
+		// grid-template-columns: 1fr 1fr 1fr;
+		// grid-template-rows: 80px repeat(3, 300px) 600px 80px;
+
+		// grid-template-areas:;
+
+		// align-items: start;
+
+	}
 }
