--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,31 +1,21 @@
 // @import 'icon/*.png';
 // @include all-icon-sprites;
 
-.hexagon {
-  position: relative;
-  width: 300px; 
-  height: 173.21px;
-  background-color: #ffffff;
-  margin: 86.60px 0;
+html{
+  background: #8a0000;
 }
-
-.hexagon:before,
-.hexagon:after {
-  content: "";
-  position: absolute;
-  width: 0;
-  border-left: 150px solid transparent;
-  border-right: 150px solid transparent;
+h1,h2,h3,body{
+  color: white;
 }
-
-.hexagon:before {
-  bottom: 100%;
-  border-bottom: 86.60px solid #ffffff;
+.navigation{
+  ul{
+    background: $navbgcolor;
+    font-size: 1em;
+    li{
+      a{
+        color: white;
+        font-family: Arial;
+      }
+    }
+  }
 }
-
-.hexagon:after {
-  top: 100%;
-  width: 0;
-  border-top: 86.60px solid #ffffff;
-}
-// why...
