--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,1 @@
-// $backgroundcolor: rgba(41,48,91,1);
-// $shapecolor: rgba(255,255,255,1);
-// $textcolor: rgba(41,48,91,1);
+$navbgcolor: #292929;
