--- a/css/main.css
+++ b/css/main.css
@@ -738,7 +738,7 @@ img {
 
 .site {
   display: grid;
-  grid-template-areas: "head head head head head head" "nav nav nav nav nav nav" "sec1 sec1 sec1 sec1 sec1img sec1img" "sec2img sec2img sec2 sec2 sec2 sec2" "sec3 sec3 sec3 sec3 sec3img sec3img" "sec4img sec4img sec4 sec4 sec4 sec4" "foot foot foot foot foot foot";
+  grid-template-areas: "head head head" "nav nav nav" "sec1 sec1 sec1img" "sec2img sec2 sec2 " "sec3 sec3 sec3img" "sec4img sec4 sec4" "foot foot foot";
 }
 
 .header {
@@ -777,6 +777,7 @@ img {
   grid-area: sec1;
   margin-top: 15px;
   margin-bottom: 15px;
+  padding: 5px;
 }
 
 .sec1img {
@@ -789,6 +790,7 @@ img {
   grid-area: sec2;
   margin-top: 15px;
   margin-bottom: 15px;
+  padding: 5px;
 }
 
 .sec2img {
@@ -801,6 +803,7 @@ img {
   grid-area: sec3;
   margin-top: 15px;
   margin-bottom: 15px;
+  padding: 5px;
 }
 
 .sec3img {
@@ -813,6 +816,7 @@ img {
   grid-area: sec4;
   margin-top: 15px;
   margin-bottom: 15px;
+  padding: 5px;
 }
 
 .sec4img {
@@ -823,6 +827,26 @@ img {
 
 .footer {
   margin-top: 30px;
+}
+
+.map {
+  grid-area: sec1;
+}
+
+.mariners {
+  grid-colum-start: 1;
+  grid-colum-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  justify-self: center;
+}
+
+.seahawks {
+  grid-colum-start: 2;
+  grid-colum-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  justify-self: center;
 }
 
 @media screen and (max-width: 959px) {
