--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -104,6 +104,12 @@
 .map{
 	grid-area: sec1;
 }
+.contactinfo{
+	grid-colum-start: 2;
+	grid-colum-end: 3;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
 .mariners{
 	grid-colum-start: 1;
 	grid-colum-end: 2;
